--- a/vscode/theme.jsonc
+++ b/vscode/theme.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "Material Dark+ - Fork",
+  "name": "Rose Quartz",
   "type": "dark",
   "semanticHighlighting": true,
   "semanticTokenColors": {
@@ -1748,18 +1748,21 @@
     }
   ],
   "colors": {
-    "foreground": "#ffa6b7f5",
+    "foreground": "#e2c5d2",
     "focusBorder": "#d7437b",
-    "selection.background": "#511a29",
+    "selection.background": "#a33e61ce",
     "scrollbar.shadow": "#000000",
-    "activityBar.foreground": "#e67d99a3",
-    "activityBar.background": "#040404",
+    // (explorer, search icon) at the sidebar
+    "activityBar.foreground": "#e67d99",
+    "activityBar.background": "#1d0c13",
     "activityBar.inactiveForeground": "#c97a90f1",
+    "activityBarTop.foreground": "#e67d99",
+    "activityBarTop.background": "#1d0c13",
+    "activityBarTop.inactiveForeground": "#c97a90f1",
     "activityBarBadge.foreground": "#ffa2b3",
     "activityBarBadge.background": "#540c27",
-    "activityBar.border": "#7b4655",
-    "sideBar.background": "#1b0f12",
-    "sideBar.foreground": "#cccccc",
+    "sideBar.background": "#1d0c13",
+    "sideBar.foreground": "#e2c5d2",
     "sideBarSectionHeader.background": "#00000000",
     "sideBarSectionHeader.foreground": "#cccccc",
     "sideBarSectionHeader.border": "#cccccc33",
@@ -1779,7 +1782,8 @@
     "listFilterWidget.background": "#653723",
     "listFilterWidget.outline": "#00000000",
     "listFilterWidget.noMatchesOutline": "#d94b73",
-    "statusBar.foreground": "#ea95b1",
+    // status bar at the bottom
+    "statusBar.foreground": "#e67d99",
     "statusBar.background": "#280812",
     "statusBarItem.hoverBackground": "#ffffff1f",
     "statusBar.debuggingBackground": "#3f0918",
@@ -1788,13 +1792,15 @@
     "statusBar.noFolderForeground": "#ffffff",
     "statusBarItem.remoteBackground": "#901644",
     "statusBarItem.remoteForeground": "#ffffff",
-    "titleBar.activeBackground": "#2c0817",
-    "titleBar.activeForeground": "#f5a1a1",
+    // title bar at the top
+    "titleBar.activeBackground": "#1d0c13",
+    "titleBar.activeForeground": "#e67d99",
     "titleBar.inactiveBackground": "#1b020a",
     "titleBar.inactiveForeground": "#ff458b",
     "titleBar.border": "#965463",
     "menubar.selectionForeground": "#cccccc",
     "menubar.selectionBackground": "#f024241a",
+    // context menu
     "menu.foreground": "#cccccc",
     "menu.background": "#240c11",
     "menu.selectionForeground": "#ffffff",
@@ -1802,6 +1808,7 @@
     "menu.selectionBorder": "#00000000",
     "menu.separatorBackground": "#bbbbbb",
     "menu.border": "#00000085",
+
     "button.background": "#c24153",
     "button.foreground": "#ffffff",
     "button.hoverBackground": "#f21688",
@@ -1815,15 +1822,16 @@
     "inputOption.activeBorder": "#000000f9",
     "inputOption.activeForeground": "#ffffff",
     "input.placeholderForeground": "#fffffff5",
+
     "textLink.foreground": "#ea0a73",
     "editor.background": "#1a1117",
     "editor.foreground": "#d4d4d4",
     "editorLineNumber.foreground": "#858585",
-    "editorCursor.foreground": "#aeafad",
+    "editorCursor.foreground": "#ecafc9",
     "editorCursor.background": "#000000",
     "editor.selectionBackground": "#45222e",
-    "editor.inactiveSelectionBackground": "#3a3d41",
-    "editorWhitespace.foreground": "#e3e4e229",
+    "editor.inactiveSelectionBackground": "#3a3d41e3",
+    "editorWhitespace.foreground": "#ffffff29",
     "editor.selectionHighlightBackground": "#add6ff26",
     "editor.selectionHighlightBorder": "#495F77",
     "editor.findMatchBackground": "#424c5a",
@@ -1841,12 +1849,12 @@
     "editor.lineHighlightBorder": "#282828",
     "editorLineNumber.activeForeground": "#c6c6c6",
     "editorLink.activeForeground": "#4e94ce",
-    "editorIndentGuide.background": "#404040",
-    "editorIndentGuide.activeBackground": "#707070",
-    "editorRuler.foreground": "#5a5a5a",
+    "editorIndentGuide.background1": "#404040",
+    "editorIndentGuide.activeBackground1": "#707070",
+    "editorRuler.foreground": "#530422",
     "editorBracketMatch.background": "#0064001a",
     "editorBracketMatch.border": "#888888",
-    "editor.foldBackground": "#264f784d",
+    "editor.foldBackground": "#265f784d",
     "editorOverviewRuler.background": "#25252500",
     "editorOverviewRuler.border": "#7f7f7f4d",
     "editorError.foreground": "#f48771",
@@ -1868,19 +1876,20 @@
     "diffEditor.insertedTextBackground": "#9bb95533",
     "diffEditor.removedTextBackground": "#ff000033",
     "diffEditor.border": "#444444",
-    "panel.background": "#0d0204f5",
+    "panel.background": "#19030bf5",
     "panel.border": "#511a2c",
     "panelTitle.activeBorder": "#be4a6b",
-    "panelTitle.activeForeground": "#e7e7e7",
-    "panelTitle.inactiveForeground": "#e7e7e799",
-    "badge.background": "#4d4d4d",
-    "badge.foreground": "#ffffff",
-    "terminal.foreground": "#cccccc",
-    "terminal.selectionBackground": "#ffffff10",
-    "terminalCursor.background": "#0087FF",
-    "terminalCursor.foreground": "#ffffff",
-    "terminal.border": "#80808059",
-    "terminal.ansiBlack": "#000000",
+    "panelTitle.activeForeground": "#ffd0d0",
+    "panelTitle.inactiveForeground": "#dedede99",
+    "badge.background": "#5c3333",
+    "badge.foreground": "#b49292",
+    "terminal.foreground": "#ffd5e9",
+    "terminal.background": "#1d0a11",
+    "terminal.selectionBackground": "#6e1b3ed7",
+    "terminalCursor.background": "#731538",
+    "terminalCursor.foreground": "#978181dd",
+    "terminal.border": "#d5cfcf59",
+    "terminal.ansiBlack": "#3b3b3b",
     "terminal.ansiBlue": "#2472c8",
     "terminal.ansiBrightBlack": "#666666",
     "terminal.ansiBrightBlue": "#3b8eea",
@@ -1888,21 +1897,20 @@
     "terminal.ansiBrightGreen": "#23d18b",
     "terminal.ansiBrightMagenta": "#d670d6",
     "terminal.ansiBrightRed": "#f14c4c",
-    "terminal.ansiBrightWhite": "#e5e5e5",
+    "terminal.ansiBrightWhite": "#c4a7a7d8",
     "terminal.ansiBrightYellow": "#f5f543",
     "terminal.ansiCyan": "#11a8cd",
     "terminal.ansiGreen": "#0dbc79",
     "terminal.ansiMagenta": "#bc3fbc",
     "terminal.ansiRed": "#cd3131",
-    "terminal.ansiWhite": "#e5e5e5",
+    "terminal.ansiWhite": "#b4a4a4",
     "terminal.ansiYellow": "#e5e510",
     "breadcrumb.background": "#1b0505",
     "breadcrumb.foreground": "#cccccccc",
-    "breadcrumb.focusForeground": "#e0e0e0",
-    "editorGroupHeader.border": "#000000",
-    "editorGroupHeader.tabsBackground": "#21050a",
-    "editorGroupHeader.tabsBorder": "#000000",
-    "tab.activeForeground": "#ffffff",
+    "breadcrumb.focusforeground": "#e0e0e0",
+    // tab is the open buffer
+    "tab.hoverForeground": "#e67d99",
+    "tab.activeForeground": "#e2c5d2",
     "tab.border": "#000000",
     "tab.activeBackground": "#560f23",
     "tab.activeBorder": "#000000fb",
@@ -1919,8 +1927,6 @@
     "editorWidget.foreground": "#cccccc",
     "editorWidget.background": "#252526",
     "editorWidget.resizeBorder": "#5F5F5F",
-    "profileBadge.background": "#540c27",
-    "profileBadge.foreground": "#ffa2b3",
     "pickerGroup.border": "#3f3f46",
     "pickerGroup.foreground": "#ffffff",
     "debugToolBar.background": "#333333",
@@ -1944,29 +1950,39 @@
     "gitDecoration.stageModifiedResourceForeground": "#c9b290",
     "gitDecoration.submoduleResourceForeground": "#8db9e2",
     "gitDecoration.untrackedResourceForeground": "#9ab893",
-    "editorMarkerNavigation.background": "#2d2d30",
-    "editorMarkerNavigationError.background": "#f48771",
-    "editorMarkerNavigationWarning.background": "#cca700",
+    "editormarkernavigation.background": "#2d2d30",
+    "editormarkernavigationerror.background": "#f48771",
+    "editormarkernavigationwarning.background": "#cca700",
     "editorMarkerNavigationInfo.background": "#75beff",
-    "merge.currentHeaderBackground": "#367366",
-    "merge.currentContentBackground": "#27403B",
-    "merge.incomingHeaderBackground": "#395F8F",
-    "merge.incomingContentBackground": "#28384B",
-    "merge.commonHeaderBackground": "#383838",
-    "merge.commonContentBackground": "#282828",
-    "editorSuggestWidget.background": "#252526",
+    "merge.currentheaderbackground": "#367366",
+    "merge.currentcontentbackground": "#27403b",
+    "merge.incomingheaderbackground": "#395f8f",
+    "merge.incomingcontentbackground": "#28384b",
+    "merge.commonheaderbackground": "#383838",
+    "merge.commoncontentbackground": "#282828",
+
+    "editorHint.foreground": "#000",
+    "editorGroupHeader.border": "#000000",
+    "editorGroupHeader.tabsBackground": "#21050a",
+    "editorGroupHeader.tabsBorder": "#000000",
+    // suggestion
+    "editorSuggestWidget.background": "#1d0c13",
     "editorSuggestWidget.border": "#454545",
     "editorSuggestWidget.foreground": "#d4d4d4",
     "editorSuggestWidget.highlightForeground": "#0097fb",
-    "editorSuggestWidget.selectedBackground": "#062f4a",
-    "editorHoverWidget.foreground": "#cccccc",
-    "editorHoverWidget.background": "#252526",
-    "editorHoverWidget.border": "#454545",
+    "editorSuggestWidget.selectedBackground": "#a33e6175",
+    // hover
+    "editorHoverWidget.foreground": "#e2c5d2",
+    "editorHoverWidget.background": "#1d0c13",
+    "editorHoverWidget.highlightForeground": "#d96a8e",
+    "editorHoverWidget.statusBarBackground": "#d96a8e",
+    "editorHoverWidget.border": "#d96a8e",
+
     "peekView.border": "#007acc",
     "peekViewEditor.background": "#00090f",
-    "peekViewEditorGutter.background": "#011b2c",
     "peekViewEditor.matchHighlightBackground": "#3d2a1199",
     "peekViewEditor.matchHighlightBorder": "#d37d0f",
+    "peekViewEditorGutter.background": "#011b2c",
     "peekViewResult.background": "#252526",
     "peekViewResult.fileForeground": "#ffffff",
     "peekViewResult.lineForeground": "#bbbbbb",
@@ -1993,14 +2009,15 @@
     "minimap.background": "#1a1117",
     "sideBar.dropBackground": "#302224",
     "editorGroup.emptyBackground": "#1a1117",
-    "panelSection.border": "#80808059",
-    "statusBarItem.activeBackground": "#FFFFFF25",
+    "editorGutter.commentRangeForeground": "#c5c5c5",
+    "panelSection.border": "#d5cfcf59",
+    "statusBarItem.activeBackground": "#ffffff25",
     "settings.headerForeground": "#ffa6b7f5",
     "settings.focusedRowBackground": "#ffffff07",
     "walkThrough.embeddedEditorBackground": "#00000050",
     "breadcrumb.activeSelectionForeground": "#e0e0e0",
-    "editorGutter.commentRangeForeground": "#c5c5c5",
     "debugExceptionWidget.background": "#333333",
     "debugExceptionWidget.border": "#474747"
+
   }
 }
