--- a/yasb/config.yaml
+++ b/yasb/config.yaml
@@ -15,7 +15,7 @@ bars:
     blur_effect:
       enabled: false
       acrylic: false
-      dark_mode: true
+      dark_mode: false
       round_corners: false
       border_color: None
     window_flags:
